force-app/main/default/objects/ChatterAppendObjectField__c/ChatterAppendObjectField__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Chatter Append Object/Fields</label>
</CustomObject>