force-app/main/default/objects/ChatterAppendObjectField__c/fields/Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>Field_Labels__c</fullName>
    <description>Comma separated list of field labels to use. If blank, will use getDescribe()</description>
    <label>Field Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>