force-app/main/default/objects/ChatterAppendObjectField__c/fields/Field_s__c.field-meta.xml
<CustomField>
    <fullName>Field_s__c</fullName>
    <description>The fields in which we are appending to the chatter message. Comma separated for multiple.

Ex: Name,CreatedBy,CustomField__c</description>
    <label>Field(s)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>