force-app/main/default/objects/ChatterAppendObjectField__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object in which we are appending fields to the chatter messages</description>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>